Updating images, badges, certs, and fixing urls.

--- a/pages/modman.html
+++ b/pages/modman.html
@@ -1,5 +1,7 @@
 ---
 layout: page
 title: ModMan
-external_url: https://github.com/MichalAFerber/ModMan
+permalink: /modman
 ---
+
+<meta http-equiv="refresh" content="0; url=https://github.com/MichalAFerber/ModMan/" />
