--- a/pages/modman-documentation.html
+++ b/pages/modman-documentation.html
@@ -1,5 +1,7 @@
 ---
 layout: page
 title: ModMan
-external_url: https://github.com/MichalAFerber/ModMan
+permalink: /modman-documentation
 ---
+
+<meta http-equiv="refresh" content="0; url=https://github.com/MichalAFerber/ModMan/" />
