Added new posts, updated certs folder.

--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -8,6 +8,18 @@ weight: 3
 <div class="card-columns m-3 mt-5">
 
     <div class="wow animated fadeIn" data-wow-delay=".15s">
+        <a href="/assets/downloads/editpadclassic.zip" class="project card text-themed"><img id="editpadclassic-img"
+                class="card-img-top" src="/assets/img/editpadclassic.png" alt="SilentApp" />
+            <div class="card-body">
+                <h5 id="editpadclassic-name" class="card-title">EditPad™ Classic
+                </h5>
+                <p id="editpadclassic-desc" class="card-text">The text editor that all others were based on (IMO).
+                    Published by Just Great Software Co. Ltd.<br /><br />https://www.editpadclassic.com/</p>
+            </div>
+        </a>
+    </div>
+
+    <div class="wow animated fadeIn" data-wow-delay=".15s">
         <a href="/assets/downloads/delpart.zip" class="project card text-themed"><img id="delpart-img"
                 class="card-img-top" src="/assets/img/delpart.jpg" alt="Delpart" />
             <div class="card-body">
@@ -21,13 +33,65 @@ weight: 3
     </div>
 
     <div class="wow animated fadeIn" data-wow-delay=".15s">
-        <a href="/assets/downloads/editpadclassic.zip" class="project card text-themed"><img id="editpadclassic-img"
-                class="card-img-top" src="/assets/img/editpadclassic.png" alt="SilentApp" />
+        <a href="https://rufus.ie/" class="project card text-themed"><img id="rufus-img" class="card-img-top"
+                src="/assets/img/rufus.jpg" alt="Rufus" />
             <div class="card-body">
-                <h5 id="editpadclassic-name" class="card-title">EditPad™ Classic
+                <h5 id="rufus-name" class="card-title">Rufus
                 </h5>
-                <p id="editpadclassic-desc" class="card-text">The text editor that all others were based on (IMO).
-                    Published by Just Great Software Co. Ltd.<br /><br />https://www.editpadclassic.com/</p>
+                <p id="rufus-desc" class="card-text">The Reliable USB Formatting Utility
+                Rufus is a utility that helps format and create bootable USB flash drives, such as USB keys/pendrives, memory sticks,
+                etc. Despite its small size, Rufus provideseverything you need!<br /><br />https://github.com/pbatard/rufus/
+                </p>
+            </div>
+        </a>
+    </div>
+
+    <div class="wow animated fadeIn" data-wow-delay=".15s">
+        <a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html" class="project card text-themed"><img
+                id="putty-img" class="card-img-top" src="/assets/img/putty.png" alt="PuTTY" />
+            <div class="card-body">
+                <h5 id="putty-name" class="card-title">PuTTY
+                </h5>
+                <p id="putty-desc" class="card-text">PuTTY is a free implementation of SSH and Telnet for Windows and Unix
+                    platforms, along with an xterm
+                    terminal emulator. It is written and maintained primarily by Simon
+                    Tatham.<br /><br />https://github.com/github/putty
+                </p>
+            </div>
+        </a>
+    </div>
+
+    <div class="wow animated fadeIn" data-wow-delay=".15s">
+        <a href="https://max.codes/latest/" class="project card text-themed"><img id="latest-img" class="card-img-top"
+                src="/assets/img/latest.png" alt="Latest" />
+            <div class="card-body">
+                <h5 id="latest-name" class="card-title">Latest
+                </h5>
+                <p id="latest-desc" class="card-text">Latest is a free and open source app for macOS that checks if all your
+                    apps are up to date. Get a quick overview of
+                    which apps changed and what changed and update them right away. Latest currently supports apps
+                    downloaded from the Mac
+                    App Store and apps that use Sparkle for updates, which covers most of the apps on the
+                    market.<br /><br />https://github.com/mangerlahn/Latest
+                </p>
+            </div>
+        </a>
+    </div>
+
+    <div class="wow animated fadeIn" data-wow-delay=".15s">
+        <a href="https://github.com/ninxsoft/Mist" class="project card text-themed"><img id="mist-img" class="card-img-top"
+                src="/assets/img/mist.jpg" alt="Mist" />
+            <div class="card-body">
+                <h5 id="mist-name" class="card-title">Mist
+                </h5>
+                <p id="mist-desc" class="card-text">List & download all available macOS Firmwares / Installers available for download:
+                    <ul>
+                        <li>Display names, versions, builds, release dates and sizes</li>
+                        <li>Optionally show beta versions of macOS</li>
+                        <li>Filter macOS versions that are compatible with the Mac the app is being run from</li>
+                        <li>Export lists as CSV, JSON, Property List or YAML</li>
+                    </ul><br /><br />https://github.com/ninxsoft/Mist
+                </p>
             </div>
         </a>
     </div>
